--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.1",
+    "zod": "^3.22.4"
   }
 }
