--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint ./ --fix",
-    "dev": "tsx watch ./src/server.ts"
+    "dev": "tsx watch ./src/server.ts",
+    "build": "tsc",
+    "start": "node ./build/src/server.js"
   },
   "author": {
     "name": "Liliam Kaori Yamada",
@@ -14,6 +16,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.20",
     "@types/node": "^20.9.1",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
@@ -28,6 +31,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
